# pacman-hooks

./: .travis.yml  LICENSE  Makefile  README.md
check-broken-packages/: Cargo.toml
deleted-files/: deleted-files.hook
linux-reboot-reminder/: linux-reboot-reminder.hook
pacdiff/: pacdiff.hook  pacdiff_diffprog
reflector/: reflector.hook
