[package]
name = "check-broken-packages"
version = "0.2.0"
authors = ["desbma <desbma@users.noreply.github.com>", "Oliver Jan Krylow <oliver@bugabinga.net>"]
edition = "2018"

[profile.release]
panic = "abort"

[dependencies]
crossbeam = "*"
log = "*"
num_cpus = "*"

[dev-dependencies]
tempdir = "*"
